--- a/src/components/TodoItem/style.css
+++ b/src/components/TodoItem/style.css
@@ -1,5 +1,9 @@
-.container-item {
+.todo {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.completed {
+    text-decoration: line-through;
 }
