--- a/src/themes/App.css
+++ b/src/themes/App.css
@@ -38,6 +38,14 @@
 }
 
 
+/*-------------------Form---------------------*/
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 
 
 
