--- a/src/themes/App.css
+++ b/src/themes/App.css
@@ -45,7 +45,8 @@
   flex-direction: column;
   align-items: center;
   border: 2px solid rgb(139, 139, 139);
-  width: 50%;
+  width: 25%;
+  height: 200px;
   margin: 0 auto;
   padding: 20px;
 }
