--- a/src/themes/App.css
+++ b/src/themes/App.css
@@ -1,181 +1,89 @@
-.App {
-  text-align: center;
+
+.item-title{
+  font-size: 16px;
+  padding: 0 10px 0 10px;
+  margin: -5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-/*-------------------Profile------------------*/
-
-.profile {
-  background-color: rgb(236, 231, 231);
-  width: 300px;
-  height: 400px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  border: 1px solid grey;
-  margin: 50px 0 0 50px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  border-radius: 10px;
-}
-
-h2, h3 {
-  text-align: center;
-}
-
-.description {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.avatar {
-  background-color: #fff;
-  width: 100px;
-  height: 100px;
-  margin: 40px 0 0 0;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-}
-
-.avatar-profile { 
-  height: 80%;
-  margin: 0 auto; 
-}
-
-.text {
-  text-align: center;
-  padding: 10px;
-}
-
-.stats {
-  display: flex;
+p {
+  font-size: 13px;
+  margin: 10px 0px 0 6px;
 }
 
 ul {
-  margin: 0;
-  padding: 0;
-  border-radius: 10px;
+  list-style-type: none;
 }
 
-.label {
-  font-weight: 700;
-  color: rgb(102, 98, 98);
+li{
+  cursor: pointer;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
-.tag, .location{
-  color: rgb(102, 98, 98);
+li:hover {
+  box-shadow: 0 0 5px rgba(0,0,0,0.5);
+  transition: 0.2s;
 }
 
-.name {
-  font-weight: 700;
-}
-
-.quantity {
-  font-weight: 400;
-}
-
-li {
-  height: 70px;
-  flex: 1 0 32.8%;
-  text-align: center;
-  border: 1px solid grey;
-  background-color: rgb(230, 251, 251);
+.container-blocks {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  
+  width: 80%; 
+  flex-wrap: wrap;
+  margin: 0 auto;
+  justify-content: center;
 }
 
-li:first-child{
-  border-radius: 0 0 0 10px;
+.block-card {
+    height: 400px;
+    flex: 0 1 180px;
+    margin: 10px;
+    display: flex;
+    flex-direction: column; 
+    border: 1px solid rgb(202, 202, 202);
+    border-radius: 5px ;
+    position: relative;
 }
 
-li:last-child {
-  border-radius: 0 0 10px 0;
+.title {
+  padding: 10px;
 }
 
-
-
-span {
-margin: 10px 0 0 0;
+.image {
+  flex: 0 0 70%;
 }
 
-/*-------------------FriendList------------------*/
-
-.block {
-  width: 400px;
-  height: 150px;
-  margin: 50px 0 0 50px;
-  background-color: rgb(211, 211, 211);
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+img{
+  object-fit: cover;
 }
 
-.color {
+.progress {
   width: 40px;
   height: 40px;
+  position: absolute;
+  top: 5px;
+  left: 150px;
+  color: green;
+  background-color: #fff;
   border-radius: 50%;
 }
 
-.online {
-  flex:0 0 10%;
+.vote{
+  position: absolute;
+  margin: 10px;
 }
 
 
-.avatar-friend {
-  background-color: #fff;
-  width: 100px;
-  height: 100px;
+.container-details {
+  width: 100%;
   display: flex;
-  align-items: center;
-  border-radius: 10px;
-  flex:0 0 30%;
-  margin: 0 0 0 -60px;
+  margin: 40px auto;
+  justify-content: center;
+} 
+
+.image-detail {
+
 }
 
-.avatar-img-friend {
-  width: 80%;
-  height: 80%;
-  margin: 0 auto; 
+.block-details {
+  flex: 0 0 50%;
+  margin: 30px 0 0 50px;
 }
-
-
-
-
-
