--- a/src/themes/App.css
+++ b/src/themes/App.css
@@ -7,7 +7,7 @@
 
 p {
   font-size: 13px;
-  margin: 10px 0px 0 6px;
+  
 }
 
 ul {
@@ -32,6 +32,8 @@ li:hover {
   justify-content: center;
 }
 
+
+
 .block-card {
     height: 400px;
     flex: 0 1 180px;
@@ -53,6 +55,7 @@ li:hover {
 
 img{
   object-fit: cover;
+  border-radius: 5px 5px 0 0  ;
 }
 
 .progress {
@@ -61,29 +64,86 @@ img{
   position: absolute;
   top: 5px;
   left: 150px;
-  color: green;
-  background-color: #fff;
+  color: rgb(255, 255, 255);
+  font-weight: 700;
+  background-color: rgb(91, 180, 79);
   border-radius: 50%;
 }
 
 .vote{
   position: absolute;
-  margin: 10px;
+  top: -3px;
+  left: 8px;  
+}
+
+.date-item{
+  margin: 10px 0 0 5px;
 }
 
 
 .container-details {
-  width: 100%;
+  width: 80%;
   display: flex;
   margin: 40px auto;
   justify-content: center;
+  border: 1px solid rgb(202, 202, 202);
+  position: relative;
+  color: #fff;
+  z-index: 100;
 } 
 
-.image-detail {
+.blur {
+  position: absolute;
+  background-color: rgba(36, 36, 36, 0.774);
+  width: 100%;
+  height: 100%;
+  z-index: -99;
+}
 
+
+.image-detail {
+  border-radius: 5px;
+  padding: 20px 0 20px 20px;
 }
 
 .block-details {
-  flex: 0 0 50%;
+  flex: 0 0 3 0%;
   margin: 30px 0 0 50px;
+}
+
+.progress-details {
+  margin: 5px 0 0 5px;
+  background-color: rgb(91, 180, 79);
+  border-radius: 50%;
+}
+
+.vote-details {
+  position: absolute;
+  margin: 16px 0 0px 14px;
+  font-weight: 700;
+  z-index: 100;
+  color: #fff;
+}
+
+.user-score {
+  position: relative;
+  top: -36px;
+  left: 60px;
+}
+
+.overview-details {
+  width: 80%;
+  font-weight: 500;
+}
+
+.back-poster {
+  position: absolute;
+  width: 50%;
+  z-index: -100;
+}
+
+.back-poster-img {
+  width: 70%;
+  height: 30%;
+  object-fit: cover;
 }
